# message_ix

./: .appveyor.yml  .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .stickler.yml  .travis.yml  AUTHORS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  CONTRIBUTOR_LICENSE.rst  Dockerfile  GOVERNANCE.md  INSTALL.rst  MANIFEST.in  NOTICE.rst  PULL_REQUEST_TEMPLATE.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES.rst  SUPPORT.md  appveyor.yml  conftest.py  debug.py  install.bat  install.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_excel_read_write.xlsx
.circleci/: config.yml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  codecov.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  bug.yml  other.md  other.yml
.github/workflows/: anaconda.yml  conda.yaml  conda.yml  lint.yaml  lint.yml  miniconda.yml  nightly-on-pr-approve.yaml  nightly.yaml  nightly.yml  publish.yaml  pytest.yaml  pytest.yml  receive.yaml  update_citation_cff.yaml
ci/: .coveragerc  appveyor-install.ps1  codecov.yml  conda-requirements.txt  coveragerc  env.sh  nightly.yaml  pip-requirements.txt  requirements.txt  rtd-requirements.txt  travis-before_install.sh  travis-install.sh
ci/appveyor/: install-gams.ps1
doc/: Makefile  README.md  README.rst  api.rst  bibliography.rst  conf.py  contributing.rst  efficiency.rst  faq.rst  framework.rst  grab_gams_doc.py  index.rst  install-adv.rst  install-advanced.rst  install-full.rst  install.rst  install_full.rst  macro.rst  make.bat  newbuild.rst  notation.rst  notice.rst  prereqs.rst  publications.rst  references.bib  reporting.rst  requirements.in  requirements.txt  rmessageix.rst  sharing.rst  time.rst  tools.rst  tutorials.rst  usage.rst  whatsnew.rst
doc/_static/: newbuild_transfer.pptx
doc/contrib/: cla.rst  release.rst  tutorial.rst  version.rst  video.rst
doc/publications/: 10.1016-j.scs.2021.103257.rst  10.1038-s41560-018-0172-6.rst  10.1038-s41560-018-0179-z.rst  10.1038-s41560-021-00904-8.rst  cooling.rst  country.rst  finance.rst  global.rst  socioeconomic.rst
doc/source/: api.rst  bibliography.rst  conf.py  contributing.rst  contributor_license.rst  core.rst  debugging.rst  efficiency.rst  efficiency_methodology.rst  faq.rst  framework.rst  getting_started.rst  guide.rst  index.rst  install.rst  macro.rst  model.rst  notice.rst  prereqs.rst  reporting.rst  rmessageix.rst  scientific_programming_api.rst  technical_requirements.rst  time.rst  tutorials.rst  whatsnew.rst
doc/temporary/: Implementation of storage equations in MESSAGEix framework.docx
doc/tools/: add_year.rst  check.rst  lp_diag.rst  lp_diag_README.textile  migrate.rst  sankey.rst
doc/video/: index.rst  install.rst  recording.rst
message_ix/: __init__.py  cli.py  common.py  config.py  core.py  default_path_constants.py  default_paths.py  macro.py  macro_utils.py  message.py  message_macro.py  model_builder.py  models.py  postprocess.py  reporting.py  testing.py  utils.py  views.py  xlsx_importer.py
message_ix/.ipynb_checkpoints/: models-checkpoint.py
message_ix/macro/: __init__.py  calibrate.py
message_ix/model/: MACRO_run.gms  MESSAGE-MACRO_run.gms  MESSAGE-MACRO_run.gsp  MESSAGE_master.gms  MESSAGE_master.gsp  MESSAGE_master.log~1  MESSAGE_project.gpr  MESSAGE_project.gsp  MESSAGE_run.gms  README  cplex.op2  cplex.opt  input_editor.gms  version.gms
message_ix/report/: __init__.py  operator.py  pyam.py  sankey.py
message_ix/reporting/: __init__.py  computations.py  pyam.py
message_ix/testing/: __init__.py  nightly.py
message_ix/tests/: conftest.py  feature_price_emission.ipynb  test_cli.py  test_core.py  test_emission_pool.py  test_equation_NEW_CAPACITY_CONSTRAINT.py  test_equation_NEW_CAPACITY_CONTRAINT.py  test_feature_addon.py  test_feature_bound_activity_shares.py  test_feature_bound_emission.py  test_feature_capacity_factor.py  test_feature_duration_time.py  test_feature_price_commodity.py  test_feature_price_emission.py  test_feature_recursive_dynamic.py  test_feature_relation_time.py  test_feature_storage.py  test_feature_temporal_level.py  test_feature_vintage_and_active_years.py  test_integration.py  test_legacy_version.py  test_macro.py  test_material_stock.py  test_message.py  test_message_macro.py  test_models.py  test_nightly.py  test_report.py  test_reporting.py  test_snapshots.py  test_soft_constraints.py  test_storage.py  test_testing.py  test_tutorials.py  test_util.py  test_utils.py
message_ix/tools/: __init__.py  _check.py  migrate.py  sankey.py
message_ix/util/: __init__.py  gams_io.py  ixmp4.py  sankey.py  scenario_data.py  scenario_setup.py  sphinx_gams.py  tutorial.py
model/: MACRO_run.gms  MESSAGE-MACRO_run.gms  MESSAGE_run.gms  conopt.opt
model/MACRO/: macro_calibration.gms  macro_core.gms
model/MESSAGE/: auxiliary_settings.gms  data_load.gms  model_core.gms  reporting.gms  scaling_investment_costs.gms  sets_maps_def.gms  version_check.gms
model/MESSAGE_framework/: auxiliary_settings.gms  data_load.gms  model_core.gms  model_setup.gms  model_solve.gms  parameter_def.gms  reporting.gms  reporting_for_MACRO.gms  scaling_investment_costs.gms  (+1 more)
rmessageix/: DESCRIPTION  NAMESPACE  README.md  build_rmessageix.R
run script and output/: MESSAGE-MACRO_run_log.ipynb  Snapshot_add_macro_clean.ipynb  ssp2_baseline_macro_calibration_parameters.xlsx
tests/: conftest.py  tec_view_data.csv  test_addon.py  test_bound_emission.py  test_cli.py  test_core.py  test_feature_add_year.py  test_feature_addon.py  test_feature_bound_activity_shares.py  test_feature_bounds_shares.py  test_feature_price_commodity.py  test_feature_price_emission.py  test_integration.py  test_legacy_version.py  test_lifetime.py  test_macro.py  test_model_features.py  test_models.py  test_nightly.py  test_reporting.py  test_scenario_features.py  test_tutorials.py  test_utils.py  test_views.py  test_xlsx_import.py  testdb_setup.py  testing_utils.py  xlsx_input.xlsx  xlsx_test_data.csv
tutorial/: .gitignore  README.md  README.rst
(+369 files in other folders)
