[metadata]
name = message_ix
author = IIASA Energy, Climate, and Environment (ECE) Program
author_email = message_ix@iiasa.ac.at
license = Apache
description = the MESSAGEix integrated assessment model
long_description_content_type = text/markdown
long_description = file:README.md
url = http://github.com/iiasa/message_ix

[options]
packages = message_ix
zip_safe = True
include_package_data = True
install_requires =
    click
    ixmp >= 3.2.0
    numpy
    pandas
    PyYAML
    setuptools >= 41
setup_requires =
    setuptools >= 41
    setuptools_scm

[options.extras_require]
report =
    genno[compat]
    # TODO uncomment once this is in a released version of ixmp
    # ixmp[report]
# Deprecated alias for "report"
reporting =
    genno[compat]
docs =
    %(report)s
    %(reporting)s
    numpydoc
    sphinx >= 3.0
    sphinx_rtd_theme
    sphinxcontrib-bibtex
tutorial =
    %(reporting)s
    jupyter
    matplotlib
    plotnine
tests =
    %(docs)s
    %(tutorial)s
    asyncssh
    pint
    pyam-iamc >= 0.6
    pytest >= 5
    pytest-cov
    requests


[options.entry_points]
console_scripts =
    message-ix = message_ix.cli:main

[tool:pytest]
# Disable faulthandler plugin on Windows to prevent spurious console noise
addopts = --cov=message_ix --cov-report=
    -m "not nightly and not rmessageix"
    -p no:faulthandler
markers =
    nightly: Slow-running nightly tests of particular scenarios.
    rmessageix: test of the message_ix R interface.

[codecov.run]
omit =
    message_ix/model/*
    message_ix/tests/test_nightly.py
    message_ix/testing/nightly.py

[aliases]
test = pytest

[isort]
force_grid_wrap = 0
include_trailing_comma = True
line_length = 88
multi_line_output = 3
use_parentheses = True

[flake8]
max-line-length = 88

[mypy]
# Empty section required as of mypy 0.800;
# see https://github.com/python/mypy/issues/9940

[mypy-asyncssh.*]
ignore_missing_imports = True
[mypy-matplotlib.*]
ignore_missing_imports = True
[mypy-numpy.*]
ignore_missing_imports = True
[mypy-pandas.*]
ignore_missing_imports = True
[mypy-pint.*]
ignore_missing_imports = True
[mypy-pyam.*]
ignore_missing_imports = True
[mypy-pytest.*]
ignore_missing_imports = True
[mypy-setuptools.*]
ignore_missing_imports = True
[mypy-xarray.*]
ignore_missing_imports = True

# Indirectly via ixmp; this should be a subset of the list in ixmp's setup.cfg
[mypy-dask.*]
ignore_missing_imports = True
[mypy-jpype.*]
ignore_missing_imports = True
[mypy-nbclient.*]
ignore_missing_imports = True
[mypy-nbformat.*]
ignore_missing_imports = True
[mypy-memory_profiler.*]
ignore_missing_imports = True
[mypy-sparse.*]
ignore_missing_imports = True
