[metadata]
name = message_ix
author = IIASA Energy, Climate, and Environment (ECE) Program
author_email = message_ix@iiasa.ac.at
license = Apache
description = the MESSAGEix integrated assessment model
long_description_content_type = text/markdown
long_description = file:README.md
url = http://github.com/iiasa/message_ix
project_urls =
    Documentation = https://docs.messageix.org/
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: R
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis


[options]
packages = message_ix
zip_safe = True
include_package_data = True
install_requires =
    click
    ixmp >= 3.3.0
    numpy
    pandas
    PyYAML
    setuptools >= 41
setup_requires =
    setuptools >= 41
    setuptools_scm

[options.extras_require]
report =
    ixmp[report]
docs =
    %(report)s
    numpydoc
    sphinx >= 4.0
    sphinx_rtd_theme
    sphinxcontrib-bibtex
tutorial =
    %(report)s
    jupyter
    matplotlib
    # TODO move this upstream to ixmp[report]
    genno[plotnine]
tests =
    %(docs)s
    %(tutorial)s
    asyncssh
    pint
    pyam-iamc >= 0.6
    pytest >= 5
    pytest-cov
    requests


[options.entry_points]
console_scripts =
    message-ix = message_ix.cli:main

[tool:pytest]
# Disable faulthandler plugin on Windows to prevent spurious console noise
addopts = --cov=message_ix --cov-report=
    -m "not nightly and not rmessageix"
    -p no:faulthandler
markers =
    nightly: Slow-running nightly tests of particular scenarios.
    rmessageix: test of the message_ix R interface.

[codecov.run]
omit =
    message_ix/model/*
    message_ix/tests/test_nightly.py
    message_ix/testing/nightly.py

[aliases]
test = pytest

[isort]
force_grid_wrap = 0
include_trailing_comma = True
line_length = 88
multi_line_output = 3
use_parentheses = True

[flake8]
max-line-length = 88

[mypy]
# Empty section required as of mypy 0.800;
# see https://github.com/python/mypy/issues/9940

[mypy-asyncssh.*]
ignore_missing_imports = True
[mypy-matplotlib.*]
ignore_missing_imports = True
[mypy-numpy.*]
ignore_missing_imports = True
[mypy-pandas.*]
ignore_missing_imports = True
[mypy-pint.*]
ignore_missing_imports = True
[mypy-pyam.*]
ignore_missing_imports = True
[mypy-pytest.*]
ignore_missing_imports = True
[mypy-setuptools.*]
ignore_missing_imports = True
[mypy-xarray.*]
ignore_missing_imports = True

# Indirectly via ixmp; this should be a subset of the list in ixmp's setup.cfg
[mypy-dask.*]
ignore_missing_imports = True
[mypy-jpype.*]
ignore_missing_imports = True
[mypy-nbclient.*]
ignore_missing_imports = True
[mypy-nbformat.*]
ignore_missing_imports = True
[mypy-memory_profiler.*]
ignore_missing_imports = True
[mypy-sparse.*]
ignore_missing_imports = True
