[metadata]
name = message_ix
author = IIASA Energy, Climate, and Environment (ECE) Program
author_email = message_ix@iiasa.ac.at
license = Apache
description = the MESSAGEix integrated assessment model
long_description_content_type = text/markdown
long_description = file:README.md
url = http://github.com/iiasa/message_ix
project_urls =
    Documentation = https://docs.messageix.org/
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: R
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis

[options]
packages = message_ix
zip_safe = True
include_package_data = True
install_requires =
    click
    importlib_metadata; python_version < "3.8"
    ixmp >= 3.5.0
    numpy
    pandas >= 1.2
    PyYAML
    setuptools >= 41
setup_requires =
    setuptools >= 41
    setuptools_scm

[options.extras_require]
report =
    ixmp[report]
docs =
    %(report)s
    numpydoc
    sphinx >= 4.0
    sphinx_rtd_theme
    sphinxcontrib-bibtex
tutorial =
    %(report)s
    jupyter
    matplotlib
tests =
    %(docs)s
    %(tutorial)s
    asyncssh
    pint
    pyam-iamc >= 0.6
    pytest >= 5
    pytest-cov
    requests

[options.entry_points]
console_scripts =
    message-ix = message_ix.cli:main
